<resources>
    <string name="app_name">Pick a Book</string>

    <string name="create_event">Create an Event</string>
    <string name="get_name">Enter the Name</string>
    <string name="get_event_type">Enter Event Type</string>
    <string name="event_date">Evenet Date</string>
    <string name="event_time">Starting Time</string>
    <string name="event_venue">Venue</string>
    <string name="event_members">Max Members</string>
    <string name="event_create_btn">Create</string>
    <string name="event_update">Update Event</string>
    <string name="edit_save">Save</string>
    <string name="IMG">Image</string>
    <string name="Add_img" />
    <string name="add_event_img">Add Image</string>
    <string name="eve_img_up">Upload</string>
    <string name="enter_username">Enter the UserName</string>
    <string name="enter_password">Enter the Password</string>
    <string name="enter_email">Enter the Email</string>
    <string name="enter_phone">Enter the PhoneNumber</string>
    <string name="enter_dob">Enter the DOB</string>
    <string name="create_user">Create</string>
    <string name="user_reg">Create User</string>
    <string name="create_user_1">Create User</string>
    <string name="user_name">Enter Username</string>
    <string name="user_pass">Enter password</string>
    <string name="forget_pass_user">Forget Password</string>
    <string name="Log_in">Login</string>
    <string name="acc">Do not have an account</string>
    <string name="sign_up_user">Sign Up</string>
    <string name="email_us">Enter Email</string>
    <string name="En_e">Enter your Email</string>
    <string name="btn_fp">RESET PASSWORD</string>
    <string name="f_pass">Forget Password</string>
    <string name="msg_event">Please Enter Your Email</string>
    <string name="enter_em">Enter your Email</string>
    <string name="reg_user">Register</string>
    <string name="cr_by">Created By</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ev_name">Event Name</string>
    <string name="ev_type">Event Type</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="max_memb">Members</string>
    <string name="join_btn_event">Join</string>
    <string name="edit_save_btn_event">Save</string>
    <string name="Enter_url">Enter Picture URL</string>
    <string name="user_name_app" />
    <string name="user_name_app1">Name</string>
    <string name="user_dob_app">DOB</string>
    <string name="user_phone_num">Phone Number</string>
    <string name="user_uri_app">URL</string>
    <string name="user_num">Phone</string>
    <string name="u_mail">Email</string>
    <string name="user_edit_title">Edit Your Profile</string>
    <string name="update_user_btn">Update</string>
    <string name="evenT_view_name">Name</string>
    <string name="ev_date">Date</string>
    <string name="Time_ev">Time</string>
    <string name="venue_ev">Venue</string>
    <string name="type_ev">Type</string>
    <string name="max_mem_ev">Max Members</string>
    <string name="cur_user">Current Memebers</string>
    <string name="uri_event_get">Pic URL</string>

    <string name="create_head">Create Article</string>
    <string name="image_upload">" Image Upload"</string>
    <string name="head_line_input_txt" />
    <string name="sub_topic_input_txt" />
    <string name="small_descri_input_txt" />
    <string name="description_input_txt" />
    <string name="pngtxt">Add Image Url</string>
    <string name="Complete_btn">Complete</string>
    <string name="Cancel_btn">Back</string>

    <string name="My_Article">My Article</string>

    <string name="txt_update_head">Update Article</string>
    <string name="update_Cancel_btn">Back</string>
    <string name="update_Complete_btn">complete</string>
    <string name="update_description_input_txt" />
    <string name="update_head_line_input_txt" />
    <string name="update_sub_topic_input_txt" />
    <string name="update_small_descri_input_txt" />
    <string name="update_pngtxt">Add Image Url</string>
    <string name="todo">TODO</string>
    <string name="Articles_Head">Articles</string>
    <string name="event_list">Events</string>
    <string name="ev_time">Time</string>
    <string name="ev_date_2">Date</string>
    <string name="ev_mem">Members</string>
    <string name="greet_event">WELCOME</string>
    <string name="pro_title">PICK A BOOK</string>
    <string name="moto">Request    Get  Share</string>
    <string name="ev_moto">Request , Get ,Share</string>
    <string name="ev_cur_meme">Joined Members</string>
    <string name="my_ev_title">Created Events</string>
    <string name="event_com">Comments</string>
    <string name="hint_ev">Comment</string>
    <string name="title_home">Home</string>
    <string name="title_book">Books</string>
    <string name="title_article">Articles</string>
    <string name="title_req">Requests</string>
    <string name="title_events">Events</string>


    <string name="BookReq">ReqBookheading</string>
    <string name="submitReq">SUBMIT</string>
    <string name="Request_Book">Request Book</string>
    <string name="canclereq">Cancle</string>
    <string name="reqformtitle">Book Request</string>
    <string name="pasteheretxt">Paste Image URL</string>
    <string name="reqimg">Image URL</string>
    <string name="textview">TextView</string>
    <string name="editbookreq">Edit Request</string>
    <string name="edittxtheading">Edit Request Book</string>
    <string name="updatebtn">UPDATE</string>
    <string name="menu_bo">Books</string>
    <string name="updatehead">"update "</string>


    <string name="ShareBooks">ShareBooks</string>
    <string name="book_name">Book Name</string>
    <string name="book_category">Category</string>
    <string name="book_author">Book Author</string>
    <string name="book_description">Book Description</string>
    <string name="input_name">Book Name</string>
    <string name="input_catogery">Book Category</string>
    <string name="input_description">Description</string>
    <string name="input_auther">Book Author</string>
    <string name="Articles_title">Articles</string>
    <string name="title_Request">Requests</string>
    <string name="title_eve">Events</string>
    <string name="my_share_books">My Share Books</string>
    <string name="share_boos_view">ShareBook View</string>
    <string name="serach_event_txt">Enter keyword</string>
    <string name="home_title">HOME</string>


</resources>