<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".User.user_registration">

    <EditText
        android:id="@+id/user_txt5"
        android:layout_width="256dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="@string/enter_phone"
        android:inputType="textPersonName"
        android:textColorHint="@color/margin"
        app:layout_constraintStart_toStartOf="@+id/user_txt4"
        app:layout_constraintTop_toBottomOf="@+id/user_txt4" />

    <EditText
        android:id="@+id/user_txt6"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="@string/enter_dob"
        android:inputType="textPersonName"
        android:textColorHint="@color/margin"
        app:layout_constraintStart_toStartOf="@+id/user_txt5"
        app:layout_constraintTop_toBottomOf="@+id/user_txt5" />

    <EditText
        android:id="@+id/user_txt7"
        android:layout_width="240dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="@string/Enter_url"
        android:inputType="textPersonName"
        android:textColorHint="@color/margin"
        app:layout_constraintStart_toStartOf="@+id/user_txt5"
        app:layout_constraintTop_toBottomOf="@+id/user_txt5" />

    <EditText
        android:id="@+id/user_txt1"
        android:layout_width="258dp"
        android:layout_height="38dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="@string/get_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/user_txt3"
        android:layout_width="256dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="@color/margin"
        app:layout_constraintStart_toStartOf="@+id/user_txt1"
        app:layout_constraintTop_toBottomOf="@+id/user_txt1" />

    <EditText
        android:id="@+id/user_txt4"
        android:layout_width="256dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textPersonName"
        android:textColorHint="@color/margin"
        app:layout_constraintStart_toStartOf="@+id/user_txt3"
        app:layout_constraintTop_toBottomOf="@+id/user_txt3" />

    <Button
        android:id="@+id/creat"
        android:layout_width="238dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:text="@string/create_user"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_txt7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="184dp"
        android:layout_height="63dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="52dp"
        android:text="@string/reg_user"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>