<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/ptext1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/get_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_1" />

    <EditText
        android:id="@+id/ptext2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/get_event_type"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptext1" />

    <EditText
        android:id="@+id/ptext6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/event_time"
        android:inputType="time"
        android:minHeight="48dp"
        android:padding="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptext5" />

    <TextView
        android:id="@+id/tw_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/create_event"
        android:textColor="@color/main_color"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/get_event_uri"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/uri_event_get"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:padding="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mem_ex" />

    <EditText
        android:id="@+id/ptext5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/event_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:padding="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptext2" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/event_create_btn"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_event_uri"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/mem_ex"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/event_members"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptext3" />

    <EditText
        android:id="@+id/ptext3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/event_venue"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptext6" />

</androidx.constraintlayout.widget.ConstraintLayout>
