<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Article.MyArticleCreate">


    <EditText
        android:id="@+id/add_Description"
        android:layout_width="299dp"
        android:layout_height="124dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:text="@string/description_input_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_Sub_topic" />

    <TextView
        android:id="@+id/txt_head_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create_head"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Backbtn"
        app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/inputimage"
        android:layout_width="114dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/preloader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_head_edit" />

    <Button
        android:id="@+id/add_submit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/Complete_btn"
        app:backgroundTint="#00AF5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_Description" />

    <Button
        android:id="@+id/add_back"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/Cancel_btn"
        app:backgroundTint="#00AF5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_submit" />

    <EditText
        android:id="@+id/add_Sub_topic"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="Sub topic/ Sub name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/sub_topic_input_txt"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_Small_description"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/add_Small_description"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="Small description"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/description_input_txt"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_Head_line"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/add_Head_line"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="Head line"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/head_line_input_txt"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pngtxt"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/pngtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/pngtxt"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_purl" />

    <ImageButton
        android:id="@+id/Backbtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:backgroundTintMode="screen"
        android:contentDescription="TODO"
        android:onClick="CreateToMyArticlePage"
        android:scaleType="centerCrop"
        android:src="@drawable/backbttn"
        app:layout_constraintBottom_toTopOf="@+id/inputimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/add_purl"
        android:layout_width="274dp"
        android:layout_height="39dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="Image URL(Copy image Address)"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputimage"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>